--- a/package.json
+++ b/package.json
@@ -25,16 +25,19 @@
   },
   "lint-staged": {
     "linters": {
-      "*.js": ["prettier-standard", "git-add"]
+      "*.js": [
+        "npm t",
+        "git-add"
+      ]
     }
   },
   "dependencies": {
-    "get-stdin": "^5.0.1"
+    "get-stdin": "^6.0.0"
   },
   "devDependencies": {
     "husky": "^0.14.3",
-    "lint-staged": "^4.1.3",
-    "prettier-standard": "^6.0.0",
+    "lint-staged": "^7.2.2",
+    "prettier-standard": "^8.0.1",
     "tape": "^4.8.0"
   }
 }
